fix scroll issues on mobile phones

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,4 @@ html, body {
   font-family: 'Poppins', sans-serif;
   background-color: #2b292c;
   overflow-x: hidden;
-  min-height: 100%;
-  -webkit-overflow-scrolling: touch;
 }
